@@ -9,6 +9,7 @@ import com.practice1.backend.account.repository.AccountJpaRepository;
 import com.practice1.backend.account_auth.entity.AccountAuthEntity;
 import com.practice1.backend.account_auth.exception.AuthException;
 import com.practice1.backend.account_auth.repository.AccountAuthJpaRepository;
+import com.practice1.backend.account_auth.service.AccountAuthService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.dao.PessimisticLockingFailureException;
 import org.springframework.retry.annotation.Backoff;
@@ -26,15 +27,15 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 public class AccountService {
+
     private final AccountJpaRepository accountJpaRepository;
-    private final AccountAuthJpaRepository accountAuthJpaRepository;
-    private final PasswordEncoder encoder;
+    private final AccountAuthService accountAuthService;
 
     @Transactional(readOnly = true)
     public List<AccountResDto> getAccountList(Long id) {
         return accountJpaRepository.findByCustomer_CustomerId(id).stream()
                 .map(AccountResDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
@@ -42,41 +43,15 @@ public class AccountService {
         return accountJpaRepository.findBalanceByAccountId(accountId);
     }
 
-    @Retryable(retryFor= {PessimisticLockingFailureException.class, LockTimeoutException.class},
-            backoff = @Backoff(delay = 100, multiplier = 2))
     @Transactional
     public void withdrawAndDeposit(WithdrawReqDto req) throws AuthException {
-        AccountEntity from = accountJpaRepository.findByIdOptimistic(req.getFromAccountId())
+        AccountEntity from = accountJpaRepository.findByIdForUpdate(req.getFromAccountId())
                 .orElseThrow(() -> new AccountNotFoundException(req.getFromAccountId()));
-        verifyPassword(req.getFromAccountId(), req.getRawPassword());
-        AccountEntity to = accountJpaRepository.findByIdOptimistic(req.getToAccountId())
+        accountAuthService.verifyPassword(req.getFromAccountId(), req.getRawPassword());
+        AccountEntity to = accountJpaRepository.findByIdForUpdate(req.getToAccountId())
                 .orElseThrow(() -> new AccountNotFoundException(req.getToAccountId()));
         from.withdraw(req.getAmount());
         to.deposit(req.getAmount());
     }
 
-    @Transactional(noRollbackFor = AuthException.class)
-    public void verifyPassword(Long accountId, String rawPassword) {
-        AccountAuthEntity auth = accountAuthJpaRepository.findById(accountId)
-                .orElseThrow(() -> new AccountNotFoundException(accountId));
-
-        if(!encoder.matches(rawPassword, auth.getPassword())) {
-            auth.increaseFail();
-            throw new AuthException(auth.getFailCount());
-        } else {
-            unlock(accountId);
-        }
-    }
-
-    @Transactional
-    public void unlock(Long accountId) {
-        AccountAuthEntity auth = accountAuthJpaRepository.findById(accountId)
-                .orElseThrow(() -> new AccountNotFoundException(accountId));
-        LocalDateTime lockUntil = auth.getLockUntil();
-        if(auth.getStatus().equals("LOCKED") && lockUntil.isAfter(LocalDateTime.now())){
-            throw new AccountNotAvailableException();
-        } else {
-            auth.unlock();
-        }
-    }
 }
